feat: add static dataset and new script for processing items
- Added a new static dataset of 100,000 sequential integers in `src/json_response.js`.
- Introduced `src/sample_06.js`, which processes each item from the dataset and logs the results.
- Updated `package.json` to include a new script command for running the new sample.

--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "two": "node ./src/sample_02.js",
     "three": "node ./src/sample_03.js",
     "four": "node ./src/sample_04.js",
-    "five": "node ./src/sample_05.js"
+    "five": "node ./src/sample_05.js",
+    "six": "node --max-old-space-size=50 --stack-size=80 ./src/sample_06.js"
   },
   "dependencies": {},
   "devDependencies": {}
 }
-
-
